cp project/force-app/main/default/objects/Swap__c/Swap__c.object-meta.xml
<CustomObject>
    <description>Unit Swap workflow in same project. 2-Tier approval: Sales Head -&gt; CRM Manager.</description>
    <label>Unit Swap</label>
    <nameField>
        <displayFormat>SWP-{0000}</displayFormat>
        <label>Swap Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Swaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>