cp project/force-app/main/default/objects/Swap__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Unit Swaps</relationshipLabel>
    <relationshipName>Unit_Swaps</relationshipName>
    <type>Lookup</type>
</CustomField>