cp project/force-app/main/default/objects/Swap__c/fields/CRM_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>CRM_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRM Manager Approval</label>
    <type>Checkbox</type>
</CustomField>