cp project/force-app/main/default/objects/Swap__c/fields/New_Booking__c.field-meta.xml
<CustomField>
    <fullName>New_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Swapped In Bookings</relationshipLabel>
    <relationshipName>Swapped_In_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>