cp project/force-app/main/default/objects/Swap__c/fields/New_Target_Unit__c.field-meta.xml
<CustomField>
    <fullName>New_Target_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Target Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>New Swaps</relationshipLabel>
    <relationshipName>New_Swaps</relationshipName>
    <type>Lookup</type>
</CustomField>