cp project/force-app/main/default/objects/Swap__c/fields/New_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Unit_Number__c</fullName>
    <label>New Target Unit Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>