cp project/force-app/main/default/objects/Swap__c/fields/Old_Unit__c.field-meta.xml
<CustomField>
    <fullName>Old_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Old Swaps</relationshipLabel>
    <relationshipName>Old_Swaps</relationshipName>
    <type>Lookup</type>
</CustomField>