cp project/force-app/main/default/objects/Swap__c/fields/Sales_Head_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sales_Head_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Head Approval</label>
    <type>Checkbox</type>
</CustomField>