cp project/force-app/main/default/objects/Swap__c/fields/Swap_Ref__c.field-meta.xml
<CustomField>
    <fullName>Swap_Ref__c</fullName>
    <label>Swap Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>