cp project/force-app/main/default/objects/Swap__c/validationRules/Cannot_Swap_After_Registration.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Swap_After_Registration</fullName>
    <active>true</active>
    <description>Golden Rule Violation: Unit Swap is not allowed after Registration stage.</description>
    <errorConditionFormula>OR(ISPICKVAL(Booking__r.Stage__c, &quot;Registration&quot;), ISPICKVAL(Booking__r.Stage__c, &quot;Handover&quot;), ISPICKVAL(Booking__r.Stage__c, &quot;Completed&quot;))</errorConditionFormula>
    <errorMessage>Golden Rule Violation: Unit Swap is not allowed after Registration stage.</errorMessage>
</ValidationRule>